[package]
name = "kubediff"
version = "0.1.8"
edition = "2021"
authors = ["https://github.com/ramilito"]

[lib]
name = "kubediff"
path = "src/lib.rs"

[[bin]]
name = "kubediff"
path = "src/main.rs"
required-features = ["cli"]

[features]
default = ["cli"]
cli = ["dep:bat", "dep:clap", "dep:colored"]

[dependencies]
# Library dependencies (always included)
anyhow = "1.0.75"
dirs = "4.0.0"
glob = "0.3.0"
rayon = "1.8.0"
serde = { version = "1.0.142", features = ["derive"] }
serde_yaml = "0.8.26"

# CLI-only dependencies (optional)
bat = { version = "0.24.0", optional = true }
clap = { version = "4.5.9", features = ["derive"], optional = true }
colored = { version = "2.0.4", optional = true }

