[package]
name = "kubediff"
version = "1.0.4"
edition = "2021"
authors = ["https://github.com/ramilito"]
description = "A diff tool for Kubernetes manifests"
license = "MIT"
repository = "https://github.com/ramilito/kubediff"
readme = ".github/README.md"
keywords = ["kubernetes", "diff", "kustomize", "k8s"]
categories = ["command-line-utilities", "development-tools"]

[lib]
name = "kubediff"
path = "src/lib.rs"

[[bin]]
name = "kubediff"
path = "src/main.rs"
required-features = ["cli"]

[features]
default = ["cli"]
cli = ["dep:bat", "dep:clap", "dep:colored"]

[dependencies]
# Library dependencies (always included)
anyhow = "1.0.75"
dirs = "4.0.0"
glob = "0.3.0"
serde = { version = "1.0.142", features = ["derive"] }
serde_yaml = "0.8.26"

# Kubernetes client
kube = { version = "0.95", features = ["client", "config", "runtime"] }
k8s-openapi = { version = "0.23", features = ["latest"] }

# Async runtime
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
futures = "0.3"

# Diff generation
similar = "2.6"

# JSON manipulation for filtering
serde_json = "1.0"

# CLI-only dependencies (optional)
bat = { version = "0.24.0", optional = true }
clap = { version = "4.5.9", features = ["derive"], optional = true }
colored = { version = "2.0.4", optional = true }

